--- a/src/components/ProjectStatistics/projectStatistics.scss
+++ b/src/components/ProjectStatistics/projectStatistics.scss
@@ -8,8 +8,7 @@
     position: relative;
     display: flex;
     flex: 1;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
 
     &__value {
       font-weight: 300;
@@ -32,7 +31,13 @@
       }
     }
 
+    &__label {
+      min-width: 100%;
+      max-width: 100px;
+    }
+
     a {
+      width: 100%;
       margin: 0 10px;
     }
 
@@ -54,12 +59,9 @@
     }
 
     &:not(:last-child)::after {
-      position: absolute;
-      top: 50%;
-      right: 0;
       height: 28px;
+      margin: auto 0;
       border-right: $dividerBorder;
-      transform: translate(0, -50%);
       content: '';
     }
   }
